--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
+            "envFile": "/Users/chris/local/git/stream/tools/chatbot/.creds",
             "program": "${file}"
         },
         {
